--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="qr-image">
-      <img src="images/image-qr-code.png" alt="qr-image">
+      <img src="image-qr-code.png" alt="qr-image">
     </div>
       <p class="strong">Improve your front-end skills by building projects</p>
       <p class="normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
