--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="container">
-    <div class="qr-image">
-      <img src="image-qr-code.png" alt="qr-image">
+
+  <main>
+    <div class="container">
+      <div class="qr-image">
+        <img src="image-qr-code.png" alt="Frontend Mentor QR Code">
+      </div>
+        <h1 class="strong">Improve your front-end skills by building projects</h1>
+        <p class="normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-      <p class="strong">Improve your front-end skills by building projects</p>
-      <p class="normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 
-  
-
-  
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/JordonTurner" target="_blank">Jordon Turner</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/JordonTurner" target="_blank">Jordon Turner</a>.
+    </div>
+  </footer>
 </body>
 </html>
